Refreshed CLIContainer
- META-INF/hk2-locator/default is encoded in UTF-8
- close() exceptions not swallowed any more
- Removed duplicit isLoggable
- try-with
- getDeclaredConstructor usage
- SimpleInjectionResolver moved to the bottom

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>